--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpy - Crea tu página con IA</title>
-  <meta name="description" content="Webpy crea páginas web con IA en minutos.">
+  <title>Webpy - Crea tu página web con inteligencia artificial</title>
 
-  <!-- Structured data -->
+  <!-- Meta tags SEO -->
+  <meta name="description" content="Crea tu sitio web con Webpy en minutos usando inteligencia artificial. Ideal para negocios pequeños que quieren presencia online.">
+  <meta name="keywords" content="web, diseño web, inteligencia artificial, páginas web, IA, webpy, sitios web">
+  <meta name="author" content="Webpy Co">
+
+  <!-- Canonical y hreflang -->
+  <link rel="canonical" href="https://webpy.co/" />
+  <link rel="alternate" hreflang="es" href="https://webpy.co/" />
+  <link rel="alternate" hreflang="en" href="https://webpy.co/en" />
+
+  <!-- Open Graph para redes sociales -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Webpy - Crea tu página web con inteligencia artificial">
+  <meta property="og:description" content="Diseña tu sitio web con Webpy en minutos usando IA. Perfecto para negocios modernos.">
+  <meta property="og:url" content="https://webpy.co/">
+  <meta property="og:image" content="https://webpy.co/og-image.jpg">
+  <meta property="og:locale" content="es_ES">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Webpy - Crea tu página web con inteligencia artificial">
+  <meta name="twitter:description" content="Webpy usa IA para ayudarte a crear sitios web modernos en minutos.">
+  <meta name="twitter:image" content="https://webpy.co/twitter-image.jpg">
+
+  <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -31,13 +54,20 @@
     }
   }
   </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
-<body style="margin:0;padding:0;height:100vh;overflow:hidden;">
+<body style="margin:0; padding:0; height:100vh; overflow:hidden;">
+
+  <!-- Contenido embebido desde Replit -->
   <iframe
     src="https://webpy.replit.app/metis/bwSxmlMi/2"
-    style="border:0;width:100%;height:100vh;"
+    title="Aplicación Webpy"
+    style="width:100%; height:100vh; border:none;"
     loading="lazy"
-    title="Webpy App"
+    allow="fullscreen"
   ></iframe>
+
 </body>
 </html>
