--- a/index.html
+++ b/index.html
@@ -3,122 +3,86 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Webpy - Crea tu sitio web con IA</title>
+  <title>Webpy | Páginas web con IA</title>
+  <meta name="description" content="Creamos páginas web con inteligencia artificial para emprendedores y negocios locales.">
+  <link rel="canonical" href="https://webpy.co/" />
+  <link rel="alternate" hreflang="es" href="https://webpy.co/" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <meta property="og:title" content="Webpy - Páginas Web con IA">
+  <meta property="og:description" content="Páginas web rápidas, elegantes y creadas con inteligencia artificial.">
+  <meta property="og:url" content="https://webpy.co/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://webpy.co/og-image.jpg">
 
-  <!-- Meta SEO -->
-  <meta name="description" content="Webpy crea sitios web con inteligencia artificial para negocios modernos. Descubre nuestro catálogo o conoce más sobre nosotros.">
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://webpy.co" />
-  <link rel="alternate" hreflang="es" href="https://webpy.co" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Webpy - Crea tu sitio web con IA" />
-  <meta property="og:description" content="Impulsa tu presencia digital con sitios web rápidos y modernos." />
-  <meta property="og:url" content="https://webpy.co" />
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="es_ES" />
-  <meta property="og:image" content="https://webpy.co/og-image.jpg" />
-
-  <!-- Structured Data -->
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Webpy",
     "url": "https://webpy.co",
-    "logo": "https://webpy.co/logo.png",
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+57-319-536-3294",
-      "contactType": "customer service"
-    },
     "sameAs": [
+      "https://webpy.co",
       "https://api.whatsapp.com/send?phone=573195363294"
-    ]
+    ],
+    "logo": "https://webpy.co/logo.png"
   }
   </script>
 
   <style>
     body {
       font-family: sans-serif;
-      line-height: 1.6;
       margin: 0;
       padding: 0;
     }
-
-    header, nav, main, footer {
-      padding: 1rem 2rem;
+    header, footer {
+      background-color: #f2f2f2;
+      padding: 1em;
     }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1rem;
-      padding: 0;
-    }
-
-    nav ul li {
-      display: inline;
-    }
-
-    a {
-      color: #0066cc;
+    nav a {
+      margin-right: 15px;
       text-decoration: none;
+      color: #0070f3;
     }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
+    @media (max-width: 600px) {
+      nav a {
+        display: block;
+        margin-bottom: 10px;
       }
     }
   </style>
 </head>
-
 <body>
+
   <header>
-    <h1>Webpy - Sitios Web con Inteligencia Artificial</h1>
+    <h1>Webpy</h1>
     <nav>
-      <ul>
-        <li><a href="/about">Sobre Webpy</a></li>
-        <li><a href="/catalogue">Catálogo</a></li>
-        <li><a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">Contáctanos</a></li>
-      </ul>
+      <a href="/">Inicio</a>
+      <a href="/about">Sobre Nosotros</a>
+      <a href="/catalogue">Catálogo</a>
+      <a href="/contact">Contacto</a>
     </nav>
   </header>
 
   <main>
-    <h2>Impulsa tu presencia online</h2>
-    <p>Con Webpy, obtén un sitio web moderno, rápido y personalizado usando inteligencia artificial.</p>
+    <h2>Tu página web lista en minutos</h2>
+    <p>En Webpy usamos inteligencia artificial para crear sitios web que te representan. Desde el diseño hasta el contenido, todo está pensado para destacar tu negocio.</p>
 
     <section>
-      <h2>Explora nuestro contenido</h2>
+      <h3>Enlaces útiles</h3>
       <ul>
-        <li><a href="/about">Conoce quiénes somos</a></li>
-        <li><a href="/catalogue">Revisa el catálogo de sitios</a></li>
-        <li><a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">Chatea con nosotros por WhatsApp</a></li>
+        <li><a href="/about">¿Quiénes somos?</a></li>
+        <li><a href="/catalogue">Ver catálogo completo</a></li>
+        <li><a href="/contact">Contáctanos</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">WhatsApp</a></li>
+        <li><a href="https://webpy.co" target="_blank" rel="noopener">Visita Webpy.co</a></li>
       </ul>
     </section>
   </main>
 
   <footer>
     <p>© 2025 Webpy Co. Todos los derechos reservados.</p>
-    <nav>
-      <a href="/about">Sobre Webpy</a> |
-      <a href="/catalogue">Catálogo</a> |
-      <a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">WhatsApp</a>
-    </nav>
   </footer>
 
-  <!-- Optional redirect fallback (client-side only) -->
-  <script>
-    // Redirige de www a non-www si el usuario entra por www
-    if (location.hostname.startsWith('www.')) {
-      location.replace(location.href.replace('www.', ''));
-    }
-  </script>
 </body>
 </html>
