--- a/index.html
+++ b/index.html
@@ -3,86 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Webpy | Páginas web con IA</title>
-  <meta name="description" content="Creamos páginas web con inteligencia artificial para emprendedores y negocios locales.">
-  <link rel="canonical" href="https://webpy.co/" />
-  <link rel="alternate" hreflang="es" href="https://webpy.co/" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <meta property="og:title" content="Webpy - Páginas Web con IA">
-  <meta property="og:description" content="Páginas web rápidas, elegantes y creadas con inteligencia artificial.">
-  <meta property="og:url" content="https://webpy.co/">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://webpy.co/og-image.jpg">
+  <title>Webpy | Páginas web profesionales para emprendedores</title>
 
-  <!-- JSON-LD Structured Data -->
+  <!-- SEO Meta -->
+  <meta name="description" content="Creamos páginas web modernas, económicas y rápidas para emprendedores y negocios. Sin complicaciones.">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://webpy.co/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Webpy | Páginas web profesionales" />
+  <meta property="og:description" content="Páginas modernas, económicas y rápidas para tu negocio o emprendimiento." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://webpy.co/" />
+  <meta property="og:image" content="https://webpy.co/images/og-image.png" />
+
+  <!-- Structured Data JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Webpy",
     "url": "https://webpy.co",
+    "logo": "https://webpy.co/images/logo.png",
     "sameAs": [
       "https://webpy.co",
       "https://api.whatsapp.com/send?phone=573195363294"
-    ],
-    "logo": "https://webpy.co/logo.png"
+    ]
   }
   </script>
-
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    header, footer {
-      background-color: #f2f2f2;
-      padding: 1em;
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: #0070f3;
-    }
-    @media (max-width: 600px) {
-      nav a {
-        display: block;
-        margin-bottom: 10px;
-      }
-    }
-  </style>
 </head>
 <body>
-
   <header>
-    <h1>Webpy</h1>
+    <h1>Bienvenido a Webpy</h1>
     <nav>
-      <a href="/">Inicio</a>
-      <a href="/about">Sobre Nosotros</a>
-      <a href="/catalogue">Catálogo</a>
-      <a href="/contact">Contacto</a>
+      <ul>
+        <li><a href="/about">Sobre Nosotros</a></li>
+        <li><a href="/catalogue">Catálogo</a></li>
+        <li><a href="/servicios">Servicios</a></li>
+        <li><a href="/faq">Preguntas Frecuentes</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+        <li><a href="/testimonios">Testimonios</a></li>
+        <li><a href="/precios">Planes y Precios</a></li>
+        <li><a href="/blog">Blog</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Tu página web lista en minutos</h2>
-    <p>En Webpy usamos inteligencia artificial para crear sitios web que te representan. Desde el diseño hasta el contenido, todo está pensado para destacar tu negocio.</p>
-
     <section>
-      <h3>Enlaces útiles</h3>
+      <h2>Tu página web en minutos</h2>
+      <p>Con Webpy puedes tener una página moderna, rápida y efectiva sin complicaciones.</p>
       <ul>
-        <li><a href="/about">¿Quiénes somos?</a></li>
-        <li><a href="/catalogue">Ver catálogo completo</a></li>
-        <li><a href="/contact">Contáctanos</a></li>
-        <li><a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">WhatsApp</a></li>
-        <li><a href="https://webpy.co" target="_blank" rel="noopener">Visita Webpy.co</a></li>
+        <li><a href="/catalogue">Explora nuestro catálogo de plantillas</a></li>
+        <li><a href="/about">Conoce más sobre nuestro equipo</a></li>
+        <li><a href="/faq">Resuelve tus dudas frecuentes</a></li>
+        <li><a href="/contacto">Habla con nosotros</a></li>
+        <li><a href="/servicios">Mira todo lo que ofrecemos</a></li>
+        <li><a href="/testimonios">Lee lo que opinan nuestros clientes</a></li>
+        <li><a href="/precios">Compara nuestros planes y precios</a></li>
+        <li><a href="/blog">Lee artículos sobre marketing y diseño web</a></li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Webpy Co. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Webpy. Todos los derechos reservados.</p>
+    <a href="https://webpy.co" target="_blank" rel="noopener">Visita Webpy.co</a><br />
+    <a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">Contáctanos por WhatsApp</a>
   </footer>
-
 </body>
 </html>
