--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
   <!-- SEO Meta -->
   <meta name="description" content="Creamos páginas web modernas, económicas y rápidas para emprendedores y negocios. Sin complicaciones.">
-
-  <!-- Canonical -->
   <link rel="canonical" href="https://webpy.co/" />
 
   <!-- Open Graph -->
@@ -32,6 +30,86 @@
     ]
   }
   </script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f8f9fa;
+    }
+
+    header, footer {
+      background-color: #004080;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    nav ul li {
+      margin: 5px 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+    }
+
+    h2 {
+      font-size: 1.8rem;
+      margin-top: 1em;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: underline;
+    }
+
+    /* 🌐 Media Query para móviles */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1.4rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+      }
+
+      nav ul li {
+        margin: 10px 0;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -46,6 +124,10 @@
         <li><a href="/testimonios">Testimonios</a></li>
         <li><a href="/precios">Planes y Precios</a></li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="/equipo">Nuestro Equipo</a></li>
+        <li><a href="/soporte">Soporte Técnico</a></li>
+        <li><a href="/terminos">Términos y Condiciones</a></li>
+        <li><a href="/privacidad">Política de Privacidad</a></li>
       </ul>
     </nav>
   </header>
@@ -63,6 +145,9 @@
         <li><a href="/testimonios">Lee lo que opinan nuestros clientes</a></li>
         <li><a href="/precios">Compara nuestros planes y precios</a></li>
         <li><a href="/blog">Lee artículos sobre marketing y diseño web</a></li>
+        <li><a href="/soporte">Accede al centro de soporte</a></li>
+        <li><a href="/terminos">Consulta los términos de uso</a></li>
+        <li><a href="/privacidad">Política de privacidad y manejo de datos</a></li>
       </ul>
     </section>
   </main>
