--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   }
   </script>
   
-<!--
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -112,7 +112,7 @@
     }
   </style>
 </head>
-<body>
+<!--<body>
   <header>
     <h1>Bienvenido a Webpy</h1>
     <nav>
