Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -9,110 +9,21 @@
   <meta name="description" content="Creamos páginas web modernas, económicas y rápidas para emprendedores y negocios. Sin complicaciones.">
   <link rel="canonical" href="https://webpy.co/" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Webpy | Páginas web profesionales" />
-  <meta property="og:description" content="Páginas modernas, económicas y rápidas para tu negocio o emprendimiento." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://webpy.co/" />
-  <meta property="og:image" content="https://webpy.co/images/og-image.png" />
-
-  <!-- Structured Data JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Webpy",
-    "url": "https://webpy.co",
-    "logo": "https://webpy.co/images/logo.png",
-    "sameAs": [
-      "https://webpy.co",
-      "https://api.whatsapp.com/send?phone=573195363294"
-    ]
-  }
-  </script>
-  
-
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
-      color: #333;
-      background-color: #f8f9fa;
     }
 
-    header, footer {
-      background-color: #004080;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav ul {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      list-style: none;
-      padding: 0;
-      margin: 10px 0;
-    }
-
-    nav ul li {
-      margin: 5px 15px;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-    }
-
-    h2 {
-      font-size: 1.8rem;
-      margin-top: 1em;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    footer a {
-      color: white;
-      text-decoration: underline;
-    }
-
-    /* 🌐 Media Query para móviles */
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      h2 {
-        font-size: 1.4rem;
-      }
-
-      nav ul {
-        flex-direction: column;
-      }
-
-      nav ul li {
-        margin: 10px 0;
-      }
+    iframe {
+      width: 100%;
+      height: 100vh;
+      border: none;
     }
   </style>
 </head>
-<!--<body>
+<body>
+  <!--
   <header>
     <h1>Bienvenido a Webpy</h1>
     <nav>
@@ -137,19 +48,6 @@
     <section>
       <h2>Tu página web en minutos</h2>
       <p>Con Webpy puedes tener una página moderna, rápida y efectiva sin complicaciones.</p>
-      <ul>
-        <li><a href="/catalogue">Explora nuestro catálogo de plantillas</a></li>
-        <li><a href="/about">Conoce más sobre nuestro equipo</a></li>
-        <li><a href="/faq">Resuelve tus dudas frecuentes</a></li>
-        <li><a href="/contacto">Habla con nosotros</a></li>
-        <li><a href="/servicios">Mira todo lo que ofrecemos</a></li>
-        <li><a href="/testimonios">Lee lo que opinan nuestros clientes</a></li>
-        <li><a href="/precios">Compara nuestros planes y precios</a></li>
-        <li><a href="/blog">Lee artículos sobre marketing y diseño web</a></li>
-        <li><a href="/soporte">Accede al centro de soporte</a></li>
-        <li><a href="/terminos">Consulta los términos de uso</a></li>
-        <li><a href="/privacidad">Política de privacidad y manejo de datos</a></li>
-      </ul>
     </section>
   </main>
 
@@ -158,6 +56,9 @@
     <a href="https://webpy.co" target="_blank" rel="noopener">Visita Webpy.co</a><br />
     <a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener">Contáctanos por WhatsApp</a>
   </footer>
+  -->
+
+  <!-- Iframe principal cargando contenido dinámico -->
+  <iframe src="https://webpy.replit.app/metis/bwSxmlMi/2" loading="lazy" title="Contenido Webpy desde Replit"></iframe>
 </body>
--->  
 </html>
