--- a/index.html
+++ b/index.html
@@ -1,43 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpy - Crea tu página con IA</title>
-  <meta name="description" content="Webpy crea páginas web con IA en minutos.">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Webpy | Páginas web profesionales para emprendedores</title>
 
-  <!-- Structured data -->
+  <!-- SEO Meta -->
+  <meta name="description" content="Creamos páginas web modernas, económicas y rápidas para emprendedores y negocios. Sin complicaciones.">
+  <link rel="canonical" href="https://webpy.co/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Webpy | Páginas web profesionales" />
+  <meta property="og:description" content="Páginas modernas, económicas y rápidas para tu negocio o emprendimiento." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://webpy.co/" />
+  <meta property="og:image" content="https://webpy.co/images/og-image.png" />
+
+  <!-- Structured Data JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebSite",
+    "@type": "Organization",
     "name": "Webpy",
     "url": "https://webpy.co",
-    "description": "Webpy crea sitios web con inteligencia artificial en minutos.",
-    "inLanguage": "es",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Webpy Co",
-      "url": "https://webpy.co",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://webpy.co/logo.png"
-      }
-    },
-    "potentialAction": {
-      "@type": "SearchAction",
-      "target": "https://webpy.co/buscar?q={search_term_string}",
-      "query-input": "required name=search_term_string"
-    }
+    "logo": "https://webpy.co/images/logo.png",
+    "sameAs": [
+      "https://webpy.co",
+      "https://api.whatsapp.com/send?phone=573195363294"
+    ]
   }
   </script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f8f9fa;
+    }
+
+    header, footer {
+      background-color: #004080;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    nav ul li {
+      margin: 5px 15px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+    }
+
+    h2 {
+      font-size: 1.8rem;
+      margin-top: 1em;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: underline;
+    }
+
+    /* 🌐 Media Query para móviles */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1.4rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+      }
+
+      nav ul li {
+        margin: 10px 0;
+      }
+    }
+  </style>
 </head>
-<body style="margin:0;padding:0;height:100vh;overflow:hidden;">
-  <iframe
-    src="https://webpy.replit.app/metis/bwSxmlMi/2"
-    style="border:0;width:100%;height:100vh;"
-    loading="lazy"
-    title="Webpy App"
-  ></iframe>
+<body class="hidden">
+  <header class="hidden">
+    <h1>Bienvenido a Webpy</h1>
+    <nav class="hidden">
+      <ul class="hidden">
+        <li class="hidden"><a href="/about">Sobre Nosotros</a></li>
+        <li class="hidden"><a href="/catalogue">Catálogo</a></li>
+        <li class="hidden"><a href="/servicios">Servicios</a></li>
+        <li class="hidden"><a href="/faq">Preguntas Frecuentes</a></li>
+        <li class="hidden"><a href="/contacto">Contacto</a></li>
+        <li class="hidden"><a href="/testimonios">Testimonios</a></li>
+        <li class="hidden"><a href="/precios">Planes y Precios</a></li>
+        <li class="hidden"><a href="/blog">Blog</a></li>
+        <li class="hidden"><a href="/equipo">Nuestro Equipo</a></li>
+        <li class="hidden"><a href="/soporte">Soporte Técnico</a></li>
+        <li class="hidden"><a href="/terminos">Términos y Condiciones</a></li>
+        <li class="hidden"><a href="/privacidad">Política de Privacidad</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="hidden">
+    <section class="hidden">
+      <h2 class="hidden">Tu página web en minutos</h2>
+      <p class="hidden">Con Webpy puedes tener una página moderna, rápida y efectiva sin complicaciones.</p>
+      <ul class="hidden">
+        <li class="hidden"><a href="/catalogue">Explora nuestro catálogo de plantillas</a></li>
+        <li class="hidden"><a href="/about">Conoce más sobre nuestro equipo</a></li>
+        <li class="hidden"><a href="/faq">Resuelve tus dudas frecuentes</a></li>
+        <li class="hidden"><a href="/contacto">Habla con nosotros</a></li>
+        <li class="hidden"><a href="/servicios">Mira todo lo que ofrecemos</a></li>
+        <li class="hidden"><a href="/testimonios">Lee lo que opinan nuestros clientes</a></li>
+        <li class="hidden"><a href="/precios">Compara nuestros planes y precios</a></li>
+        <li class="hidden"><a href="/blog">Lee artículos sobre marketing y diseño web</a></li>
+        <li class="hidden"><a href="/soporte">Accede al centro de soporte</a></li>
+        <li class="hidden"><a href="/terminos">Consulta los términos de uso</a></li>
+        <li class="hidden"><a href="/privacidad">Política de privacidad y manejo de datos</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="hidden">
+    <p class="hidden">&copy; 2025 Webpy. Todos los derechos reservados.</p>
+    <a href="https://webpy.co" target="_blank" rel="noopener" class="hidden">Visita Webpy.co</a><br />
+    <a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener" class="hidden">Contáctanos por WhatsApp</a>
+  </footer>
 </body>
 </html>
