--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     }
   </style>
 </head>
-<body class="hidden">
+<!--<body class="hidden">
   <header class="hidden">
     <h1>Bienvenido a Webpy</h1>
     <nav class="hidden">
@@ -157,5 +157,5 @@
     <a href="https://webpy.co" target="_blank" rel="noopener" class="hidden">Visita Webpy.co</a><br />
     <a href="https://api.whatsapp.com/send?phone=573195363294" target="_blank" rel="noopener" class="hidden">Contáctanos por WhatsApp</a>
   </footer>
-</body>
+</body>-->
 </html>
