--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <h2 class="hidden">Crea tu página web en segundos con nuestro creador impulsado por inteligencia artificial.</h2>
         <a href="https://webpy.co" class="hidden">Hecho en Webpy</a>
         <a href="https://webpy.bubbleapps.io/ai" class="hidden">Empieza Gratis</a>
+        <a href="/about" class="hidden"></a>
+        <a href="/catalogue" class="hidden"></a>
+        <a href="/terminos" class="hidden"></a>
+        <a href="/faqs" class="hidden"></a>
+        <a href="/blog" class="hidden"></a>
+        <a href="/inicio" class="hidden"></a>
     </body>
     <script>var loc=window.location.toString(),params=loc.split('?')[1],iframe=document.getElementById('myIframe');iframe.src=iframe.src + '?' + params;</script>
 
