--- a/index.html
+++ b/index.html
@@ -69,72 +69,66 @@
     <script>var loc=window.location.toString(),params=loc.split('?')[1],iframe=document.getElementById('myIframe');iframe.src=iframe.src + '?' + params;</script>
 
 <style>
-        /* Estilos generales */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+    /* Estilos generales */
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+
+    .iframe-container {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 100vh; /* Alto completo en todos los dispositivos */
+    }
+
+    .iframe-container iframe {
+        border: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%; /* Asegura que el iframe ocupe todo el espacio disponible */
+    }
+
+    .hidden { 
+        display: none; 
+    }
+
+    h1, h2 {
+        font-size: 2rem;
+        margin: 20px;
+    }
+
+    a {
+        color: #1a73e8;
+        text-decoration: none;
+    }
+
+    /* Media Queries */
+    @media (max-width: 768px) {
+        h1 {
+            font-size: 1.5rem;
+            text-align: center;
         }
 
-        .iframe-container {
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-            height: 100vh;
+        h2 {
+            font-size: 1.2rem;
+            text-align: center;
+        }
+    }
+
+    @media (max-width: 480px) {
+        h1 {
+            font-size: 1.2rem;
         }
 
-        .iframe-container iframe {
-            border: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        h2 {
+            font-size: 1rem;
         }
-
-        .hidden { display: none; }
-
-        h1, h2 {
-            font-size: 2rem;
-            margin: 20px;
-        }
-
-        a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        /* Media Queries */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 1.5rem;
-                text-align: center;
-            }
-
-            h2 {
-                font-size: 1.2rem;
-                text-align: center;
-            }
-
-            .iframe-container {
-                height: 60vh;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.2rem;
-            }
-
-            h2 {
-                font-size: 1rem;
-            }
-
-            .iframe-container {
-                height: 50vh;
-            }
-        }
-    </style>
+    }
+</style>
     
 </html>
